# ros_gradution_project

./: .ycm_extra_conf.py
.catkin_tools/profiles/default/: build.yaml
devel/: .catkin  .rosinstall  setup.sh
devel/include/actor_services/: GetVel.h  GetVelRequest.h  GetVelResponse.h  SetPose.h  SetPoseRequest.h  SetPoseResponse.h
devel/include/qq/: A.h  ARequest.h  AResponse.h  Num.h
devel/include/rrt_exploration/: PointArray.h
devel/include/rwth_perception_people_msgs/: AnnotatedFrame.h  Annotation.h  GroundHOGDetections.h  GroundPlane.h  PedestrianLocations.h  PedestrianTracking.h  PedestrianTrackingArray.h  UpperBodyDetector.h  VisualOdometry.h
devel/include/spencer_bagfile_tools/: AdditionalOdometryData.h  ReconstructOdometryConfig.h
devel/include/spencer_control_msgs/: ComponentStatus.h
devel/include/spencer_detected_person_association/: LookupTrackId.h  LookupTrackIdRequest.h  LookupTrackIdResponse.h  LookupTrackIds.h  LookupTrackIdsRequest.h  LookupTrackIdsResponse.h
devel/include/spencer_human_attribute_msgs/: CategoricalAttribute.h  HumanAttributes.h  ScalarAttribute.h
devel/lib/c8/: base_controller  laser  (+3 more)
src/c8/: CMakeLists.txt
src/c9/: CMakeLists.txt
src/qq/: CMakeLists.txt  qq.kdev4
src/qq/.kdev4/: qq.kdev4
src/qq/bagfiles/: talker.bag  testbag.bag
src/qq/launch/: qq.launch
src/qq/src/: DoG.cpp  client.cpp  client2.cpp  listener.cpp  server.cpp  talker.cpp  talker.py  talker_py.py
src/qq/srv/: A.srv
src/robot1_description/: CMakeLists.txt  urdf.rviz
src/simple_layers/: CMakeLists.txt  costmap_plugins.xml  package.xml
(+480 files in other folders)
